--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Nomflix</title>
+    <title>Bongflix</title>
   </head>
 
   <body>
