--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/fabicon.png" />
     <script
       src="https://kit.fontawesome.com/8e62300578.js"
       crossorigin="anonymous"
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Bongflix</title>
+    <title>Movie</title>
   </head>
 
   <body>
